# features

./: DWT_delay.c  DWT_delay.h  Fq_msr_poll.c  I2C.cpp  I2C.h  Kalman_filter.c  Kalman_filter.h  MAX17261.cpp  MAX17261.h  MAX17261_CONFIG.h  README  fq_msr_irq.c  lung_compilance.c  main.c  main.cpp  nrf_ble_nus.c  nrf_main.c
oximeter/: CMakeLists.txt  README.md  README.txt  prj.conf
oximeter/boards/: nrf52832.overlay
oximeter/inc/: AFE4490.h  AFE44x0.h  bluetooth.h  pin_discription.h  spi.h  uart.h
oximeter/scr/: AFE4490.c  AFE_Function.h  AFR4990.c  SPI_Zephyr.h  bluetooth.c  bluetooth.h  main.c  spi.c  uart.c
